# bumo2.0

./: .gitignore  .travis.yml  Installation_Guide_for_BUMO.rst  LICENSE  README.md  appveyor.yml  conf.py  index.rst  indexone.rst  makefile
src/: CMakeLists.txt
src/3rd/: Makefile  README.md  README_CN.md
src/3rd/curl/: build_all.sh  build_curl.sh
src/3rd/ed25519-donna/: CMakeLists.txt
src/3rd/http/: CMakeLists.txt  Makefile.am  header.hpp  reply.cpp  server.cpp
src/3rd/jsoncpp/: SConstruct
src/3rd/leveldb/: build_detect_platform
src/3rd/libscrypt/: crypto_scrypt-nosse.c  libscrypt.h
src/3rd/mysql-6.1.0/: CMakeLists.txt  VERSION  config.h.cmake
src/3rd/openssl/: Makefile  Makefile.org  build-android-openssl.sh  setenv-android.sh
src/3rd/pcre-8.39/: pcre.h
src/api/: README.md  README_CN.md  console.cpp  console.h  web_server.cpp  web_server.h  web_server_command.cpp  web_server_helper.cpp  web_server_query.cpp  web_server_update.cpp  websocket_server.cpp  websocket_server.h
src/common/: CMakeLists.txt  README.md  README_CN.md  argument.cpp  argument.h  cockroachdb.cpp  cockroachdb.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  data_secret_key.h  general.cpp  general.h  key_store.cpp  key_store.h  network.cpp  network.h  pb2json.cpp  pb2json.h  private_key.cpp  private_key.h  storage.cpp  storage.h  tidb.cpp  tidb.h
src/consensus/: CMakeLists.txt  README.md  README_CN.md  bft.cpp  bft.h  bft_instance.cpp  bft_instance.h  consensus.cpp  consensus.h  consensus_manager.cpp  consensus_manager.h  consensus_msg.cpp  consensus_msg.h  election_manager.cpp  election_manager.h  pbft.cpp  pbft.h  pbft_instance.cpp  pbft_instance.h  readme.md  readme_CN.md
src/contract/: childChainManger.js  child_chain_manger.js  contract_based_token.js  cross_process.js  delegateCallSimple.js  delegateCallSimpleCaller.js  issue_asset.js  map.js  simple_payment.js  test_createChildChain.txt  test_depositToChildChain.txt  test_payCost.txt  test_queryChildChainInfo.txt  test_submitChildBlockHeader.txt  testdelegateCall.txt
src/contract/child_chain_parameter/: createChildChain.json  createChildContract.json  deployChildContract.json  deployContract.json  depositChild.json  depositToChildChain.json  queryBalanceChild.json  queryChildBlockHeader.json  queryChildChainInfo.json  queryChildChainValidators.json  queryChildDeposit.json  queryChildFreshBlockHeader.json  queryChildFreshDeposit.json  queryDepositChild.json  queryWithdrawalChildChain.json  transferChild.json  withdrawalChild.json  withdrawalChildChain.json  withdrawalChildChain.txt
src/contract/child_validators_vote/: changeValidator.json  child_validators_vote.js  child_validators_vote.txt  cmc_validator_desigin.txt  design.txt  getValidators.json  queryProposal.json
src/cross/: CMakeLists.txt  base_proposer.cpp  base_proposer.h  block_listen_manager.cpp  block_listen_manager.h  challenge_manager.cpp  challenge_manager.h  child_proposer_manager.cpp  child_proposer_manager.h  cross_manager.cpp  cross_manager.h  cross_utils.cpp  cross_utils.h  main_proposer_manager.cpp  main_proposer_manager.h  message_channel_manager.cpp  message_channel_manager.h  message_handler.cpp  message_handler.h  proposer_manager.cpp  proposer_manager.h
src/daemon/: CMakeLists.txt  README.md  README_CN.md
src/daemon/bumo/: main.cpp
src/daemon/monitor/: main.cpp
src/glue/: CMakeLists.txt  README.md  README_CN.md  fullnode.cpp  fullnode.h  fullnode.js  fullnode_manager.cpp  fullnode_manager.h  glue_manager.cpp  glue_manager.h  ledger_upgrade.cpp  ledger_upgrade.h  readme_CN.md  transaction_queue.cpp  transaction_queue.h  transaction_set.cpp  transaction_set.h
src/ledger/: CMakeLists.txt  README.md  README_CN.md  account.cpp  account.h  asset_frm.h  contractBasedToken.js  contract_manager.cpp  contract_manager.h  electionContract.js  election_manager.cpp  election_manager.h  environment.cpp  environment.h  fee_calculate.cpp  fee_calculate.h  fee_compulate.cpp  fee_compulate.h  fees-voting.js  fees-voting.min.js  kv_trie.cpp  kv_trie.h  ledger_frm.cpp  ledger_frm.h  ledger_manager.cpp  ledger_manager.h  ledgercontext_manager.cpp  ledgercontext_manager.h  operation_frm.cpp  operation_frm.h  readme_CN.md  transaction_frm.cpp  transaction_frm.h  trie.cpp  trie.h  validators_vote.js  validators_vote.min.js
src/libbumo_tools/: CMakeLists.txt  README.md  README_CN.md  lib_bumo_tools.cpp  lib_bumo_tools.h
src/main/: CMakeLists.txt  README.md  README_CN.md  configure.cpp  configure.h  main.cpp
src/monitor/: CMakeLists.txt  README.md  README_CN.md  monitor.cpp  monitor.h  monitor_manager.cpp  monitor_manager.h  system_manager.cpp  system_manager.h
src/multichain/: proposer_manager.h
src/overlay/: CMakeLists.txt  README.md  README_CN.md  broadcast.cpp  broadcast.h  peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  peer_network.cpp  peer_network.h
src/proto/: CMakeLists.txt  README.md  README_CN.md  chain.proto  common.proto  consensus.proto  merkeltrie.proto  monitor.proto  overlay.proto  protoc-chain.bat  protoc-common.bat  protoc-consensus.bat  protoc-merkeltrie.bat  protoc-monitor.bat  protoc-overlay.bat  readme_CN.md
src/proto/cpp/: chain.pb.cc  chain.pb.h  common.pb.cc  common.pb.h  consensus.pb.cc  consensus.pb.h  merkeltrie.pb.cc  monitor.pb.cc  monitor.pb.h  overlay.pb.cc  overlay.pb.h
src/utils/: CMakeLists.txt  README.md  README_CN.md  atom_map.h  base_int.h  basen.h  common.h  crypto.cpp  crypto.h  ecc_sm2.cpp  ecc_sm2.h  entry_cache.h  exprparser.cpp  exprparser.h  file.cpp  file.h  headers.h  logger.cpp  logger.h  net.cpp  net.h  noncopyable.h  random.cpp  random.h  scopeGuard.h  serializer.cpp  serializer.h  singleton.h  sm3.cpp  sm3.h  sqlparser.cpp  sqlparser.h  stdlibs.cpp  stdlibs.h  strings.h  system.cpp  system.h  thread.cpp  thread.h  timer.cpp  (+5 more)
src/web/: README.md  README_CN.md  index.html
test/testlib/: Makefile.am  channel.cpp  channel.h  test.cpp  test.h  test_json.cpp  test_leveldbwin.cpp  test_v8_terminate.cpp  test_v8_terminate.h  test_websoketssl.cpp  testbubikey.cpp
(+170 files in other folders)
